# Anti

./: README.md  build-desktop.ps1  merge_log.txt  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/api/bootstrap/: route.ts
app/api/channels/[channelId]/messages/: route.ts
app/api/dm/[threadId]/messages/: route.ts
app/api/friends/: route.ts
app/api/friends/[requestId]/respond/: route.ts
app/api/invites/[code]/join/: route.ts
app/api/me/profile/: route.ts
app/api/messages/[messageId]/: route.ts
app/api/servers/: route.ts
app/api/servers/[serverId]/: route.ts
app/api/servers/[serverId]/invite/: route.ts
app/api/servers/[serverId]/moderation/: route.ts
app/api/social/: route.ts
app/api/unread/: route.ts
app/api/voice/session/: route.ts
components/: app-shell.tsx  auth-panel.tsx  blaze-provider.tsx  channel-list.tsx  chat-panel.tsx  nightlink-provider.tsx  prompt-modal.tsx  reaction-engine.tsx  roadmap-card.tsx  server-rail.tsx  social-panel.tsx  voice-bar.tsx  voice-panel.tsx
lib/: context.ts  data.ts  env.ts  mock-data.ts  product-roadmap.ts  store.ts  types.ts  voice-engine.ts
lib/hooks/: use-auth-sync.ts  use-presence.ts  use-realtime-chat.ts  use-ui-sounds.ts  use-voice-room.ts  use-workspace-data.ts
lib/supabase/: auth.ts  server.ts
public/: voice-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
supabase/: schema.sql  storage-setup.sql
