[package]
name = "blaze-desktop"
version = "1.0.0"
description = "Native desktop wrapper for Blaze"
authors = ["Blaze Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
